# cadora-pro

./: .gitignore  docker-compose.yml
backend/: .dockerignore  .env.example  .env.production.example  Dockerfile  Makefile  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_add_billing.py  003_free_plan_limit_and_reset.py  004_refresh_tokens.py  005_paddle_migration.py
backend/app/: config.py  database.py  main.py
backend/app/cad/: __init__.py  generator.py  schemas.py
backend/app/controllers/: auth_controller.py  billing_controller.py  cad_controller.py  contact_controller.py  demo_controller.py  detection_controller.py  document_controller.py  project_controller.py
backend/app/detection/: __init__.py  door_detector.py  line_detector.py  schemas.py  service.py  window_detector.py
backend/app/models/: __init__.py  document.py  password_reset.py  project.py  refresh_token.py  user.py
backend/app/ocr/: __init__.py  classifier.py  engine.py  preprocessor.py  scale.py  schemas.py  service.py
backend/app/repositories/: __init__.py  document_repository.py  password_reset_repository.py  project_repository.py  refresh_token_repository.py  user_repository.py
backend/app/schemas/: __init__.py  auth.py  billing.py  document.py  project.py
backend/app/services/: auth_service.py  cleanup_service.py  document_service.py  email_service.py  paddle_service.py  plan_config.py  plan_enforcer.py  project_service.py  storage_service.py  (+1 more)
backend/tests/: conftest.py
(+134 files in other folders)
